@@ -1,0 +1,6 @@
+## Process this file with automake to produce Makefile.in
+
+SUBDIRS = viewer
+
+MAINTAINERCLEANFILES = Makefile.in
+
